<resources>
    <string name="ovk_warning_title">Warning</string>
	<string name="ovk_warning"><![CDATA[You have launched a OpenVK Legacy FOSS client that ONLY works with <a href="https://github.com/openvk/openvk">OpenVK</a> instances, an open source network that is not compatible with VKontakte / VK.<br><br>Please log in ONLY to the registered OpenVK account in one of the existing instances.]]></string>
    <string name="dont_show_warn">Don\'t show warning next time</string>
    <string name="app_name">OpenVK</string>
	<string name="full_app_name">OpenVK Legacy for Android</string>
	<string name="loading">Loading…</string>
	<string name="add_comment_hint">Your comment</string>
	<string name="send">Send</string>
	<string name="captcha_hint">Please enter the code from the image</string>
	<string name="photo">Photo</string>
	<string name="audio">Audio file</string>
	<string name="video">Video</string>
	<string name="doc">Document</string>
	<string name="send_b">Send</string>
	<string name="msg_hint">Write a message</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="instances_list_title">Instances list</string>
	<string-array name="official_instances_list" translable="false">
		<item>openvk.uk</item>
		<item>openvk.su</item>
		<item>openvk.co</item>
	</string-array>
	<string-array name="instances_list" translable="false">
		<item>social.fetbuk.ru</item>
		<item>vepurovk.xyz</item>
		<item>vepurovk.fun</item>
	</string-array>
	<string-array name="popup_menu_api_v8">
		<item>Settings</item>
		<item>About</item>
		<item>Quit</item>
	</string-array>
	<string-array name="proxy_type" translable="false">
		<item>HTTP</item>
	</string-array>
    <string-array name="connection_error_reasons">
        <item>No internet connection</item>
        <item>Server sent an invalid response</item>
        <item>Response timed out</item>
		<item>Secure connection failure</item>
        <item>Instance failure</item>
        <item>Unknown error</item>
    </string-array>
    <string name="invalid_password">Invalid password</string>
	<string name="load_more">Load more</string>
	<string-array name="months_short">
		<item>Jan</item>
		<item>Feb</item>
		<item>Mar</item>
		<item>Apr</item>
		<item>May</item>
		<item>Jun</item>
		<item>Jul</item>
		<item>Aug</item>
		<item>Sep</item>
		<item>Oct</item>
		<item>Nov</item>
		<item>Dec</item>
	</string-array>
	<string-array name="months_full">
		<item>January</item>
		<item>February</item>
		<item>March</item>
		<item>April</item>
		<item>May</item>
		<item>June</item>
		<item>July</item>
		<item>August</item>
		<item>September</item>
		<item>October</item>
		<item>November</item>
		<item>December</item>
	</string-array>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="today_at">Today at</string>
	<string name="yesterday_at">Yesterday at</string>
	<string name="date_at">at</string>
	<string name="attach_photo">Photo</string>
	<string name="attach_poll">Poll</string>
	<string name="attach_link">Link</string>
	<string name="wall_profile_photo_update">Updated their profile photo</string>
	<string name="audio_play_error">A playback error has occurred.</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="app_version_text">Version %1$s</string>
	<string-array name="like_menu">
		<item>Unlike</item>
		<item>Share with friends</item>
	</string-array>
	<string name="newsfeed">News</string>
	<string name="auth">Authorization</string>
	<string name="wall_view">Post</string>
	<string name="new_status">New post</string>
	<string-array name="messages">
		<item>message</item>
		<item>messages</item>
	</string-array>
	<string name="open_chat">Open a chat</string>
	<string name="uploading_photo">Uploading a photo</string>
	<string name="uploading_photo_err">Error uploading</string>
	<string name="uploading_photo_err_notify">An error occurred while uploading.</string>
	<string name="uploading_photo_alert">An error occurred while uploading. Retry?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="refresh">Refresh</string>
	<string-array name="photo_menu">
		<item>Take a photos</item>
		<item>Choose from album</item>
	</string-array>
	<string-array name="photo_menu2">
		<item>Take a photos</item>
		<item>Select from gallery</item>
		<item>Remove photos</item>
	</string-array>
	<string-array name="photo_menu3">
		<item>Select from gallery</item>
		<item>Remove photo</item>
	</string-array>
	<string-array name="num_new_messages">
		<item>You have a new message.</item>
		<item>You have %d new messages.</item>
	</string-array>
	<string-array name="num_poll_votes">
		<item>%d vote</item>
		<item>%d votes</item>
	</string-array>
	<string-array name="place_titles">
		<item>Home</item>
		<item>Work</item>
		<item>Restaurant</item>
		<item>Club</item>
		<item>Movie Theater</item>
		<item>Bar</item>
		<item>Entertainment</item>
		<item>Store</item>
		<item>Airport</item>
		<item>Train Station</item>
		<item>Hotel</item>
		<item>Cafe</item>
		<item>Fast Food Restaurant</item>
		<item>Pizzeria</item>
		<item>Swimming Pool</item>
		<item>Gym</item>
		<item>Educational Institution</item>
		<item>Museum</item>
		<item>Theater</item>
		<item>Park</item>
		<item>Other</item>
	</string-array>
	<string name="instance">Instance</string>
	<string name="mail">E-mail</string>
	<string name="password">Password</string>
	<string name="log_in">Log in</string>
	<string name="default_instance" translatable="false">openvk.uk</string>
	<string name="default_instance_no_https" translatable="false">openvk.co</string>
	<string name="auth_error_title">Error logging in</string>
	<string name="auth_error">An error occurred while trying to log in. Please check your login and password and try again.</string>
	<string name="wall">Wall</string>
	<string name="friends">Friends</string>
	<string name="post_to_wall">Post to wall</string>
	<string name="wall_ok">Message posted</string>
	<string name="wall_ok_long">Your post has been published.</string>
	<string name="msg_not_sent_title">Message not sent</string>
	<string name="msg_not_sent">You cannot send a message to this user due to their privacy settings.</string>
	<string name="open_group">Open group</string>
	<string name="closed_group">Closed group</string>
	<string name="private_group">Private group</string>
	<string name="search">Search</string>
	<string name="reply_to">Reply</string>
	<string name="forgot_pass">Forgot your password?</string>
	<string name="pull_to_refresh">Pull down to refresh</string>
	<string name="pull_to_refresh_bottom">Pull up to refresh</string>
	<string name="release_to_refresh">Release to refresh</string>
	<string name="refreshing">Refreshing..</string>
	<string name="updated">Updated</string>
	<string name="error">Error</string>
	<string name="attach_note">Note</string>
	<string-array name="wallview_likes">
		<item>One person likes this</item>
		<item>%d people like this</item>
	</string-array>
	<string-array name="wallview_likes_me">
		<item>You and one person like this</item>
		<item>You and %d people like this</item>
	</string-array>
	<string name="err_try_again">Try again</string>
	<string name="err_text">Cannot load data. Please check your network connection.</string>
	<string-array name="wallview_comments">
		<item>Show one more comment</item>
		<item>Show %d more comments</item>
	</string-array>
	<string name="sett_load_images">Load images</string>
	<string name="sett_load_images_summary">Disabling images significantly decreases amount of transferred data.</string>
	<string name="sett_flist_sort">Friend list order</string>
	<string-array name="sett_friends_order">
		<item>By first name</item>
		<item>By last name</item>
		<item>By popularity</item>
	</string-array>
	<string name="sett_general">General</string>
	<string name="sett_notifications">Notifications</string>
	<string name="sett_notify_sound">Sound</string>
	<string name="sett_notify_vibrate">Vibration</string>
	<string name="sett_notify_led">Blinking LED</string>
	<string name="sett_other">Others</string>
    <string name="sett_danger_zone">Danger zone</string>
	<string name="sett_network">Network settings</string>
	<string name="sett_https">Secure connection</string>
	<string name="sett_https_summary">Force use HTTPS protocol</string>
	<string name="sett_use_proxy">Use proxy server</string>
    <string name="sett_proxy_connection">Proxy connection settings</string>
	<string name="sett_proxy_address">Proxy server address</string>
	<string name="sett_proxy_address_alt">Address:</string>
	<string name="sett_proxy_type">Type:</string>
	<string-array name="date_ago_hrs">
		<item>an hour ago</item>
		<item>two hours ago</item>
		<item>three hours ago</item>
	</string-array>
	<string name="delete">Delete</string>
	<string name="save">Save</string>
	<string name="sett_account">Your account</string>
	<string name="log_out">Log out</string>
	<string name="menu_exit">Quit</string>
	<string name="sett_sync">Contacts sync</string>
	<string name="add">Add</string>
	<string name="audio_search_artist">Search artist</string>
	<string name="edit">Edit</string>
    <string name="sett_ringtone">Notification sound</string>
    <string name="delete_friend">Remove from friends</string>
	<string name="copy_text">Copy text</string>
	<string name="sett_push">Push notifications</string>
	<string name="sett_push_summary">Receive notifications even outside the app</string>
	<string name="sett_update_on_open">Refresh on open</string>
	<string name="sett_update_on_open_summary">Refresh the news feed when you open application</string>
	<string name="sett_compress_photos">Compress photos on upload</string>
	<string name="wall_owners_posts">%s\'s posts</string>
	<string name="wall_all_posts">All posts</string>
	<string name="sett_cache">Image cache</string>
	<string name="sett_cache_quality">Quality</string>
	<string name="sett_clear_img_cache">Clear</string>
	<string name="sett_advanced">Advanced settings</string>
	<string name="sett_big_images_mobile">Big photos on mobile network</string>
	<string name="sett_big_images_mobile_summary">Load big photos in posts when using 3G</string>
	<string name="msg_forward">Forward</string>
	<string name="sett_bdays">Birthday notifications</string>
	<string name="sett_send_by_enter">Send messages using Enter</string>
	<string name="sett_send_by_enter_summary">With hardware keyboard only</string>
	<string name="audio_lyrics">Lyrics</string>
	<string name="send_to_friend">Share with friend</string>
    <string name="sett_clear_audio_cache">Clear</string>
	<string name="sett_audio_cache">Music cache</string>
	<string name="enable">Enable</string>
	<string name="sett_force_tablet_ui">Tablet UI</string>
	<string name="sett_app_restart_required">Application restart is required for this setting to take effect</string>
	<string name="sett_news_banned">News filter</string>
	<string name="sett_news_banned_summary">Edit people &amp; communities that are hidden from the news feed</string>
	<string name="profile_add_post">Post to wall</string>
	<string name="copy_link">Copy link</string>
	<string name="open_in_browser">Open in a browser</string>
    <string name="copy_token">Copy access token</string>
	<string name="show_original_post">Show original post</string>
	<string name="sett_alt_video_output">Alternative video output</string>
	<string name="sett_alt_video_output_summary">Enable this if you see black screen instead of video</string>
	<string name="debug_menu">Debug menu</string>
	<string name="api_logging">API logging</string>
	<string name="write_logs_to_file">Write logs to file</string>
    <string name="send_bug_report">Send bug report</string>
	<string name="terminate">Terminate process</string>
	<string name="dnd_mode">DND mode</string>
</resources>