<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--PreferenceCategory android:title="Для Олега">
		<ListPreference android:entries="@array/sett_api_host"
			android:entryValues="@array/sett_api_host" android:title="Домен API"
			android:dialogTitle="Домен API" android:key="apiHost"
			android:defaultValue="api.vk.com" />
		<Preference android:title="Перезапустить приложение" android:summary="Чтобы новый домен применился" android:key="restart" />
        
    </PreferenceCategory-->
    
	<PreferenceCategory android:title="@string/sett_general">

		<ListPreference android:entries="@array/sett_friends_order"
			android:entryValues="@array/sett_friends_order_v" android:title="@string/sett_flist_sort"
			android:dialogTitle="@string/sett_flist_sort" android:key="friendsOrderNew"
			android:defaultValue="firstname" />
			
		<!--ListPreference android:entries="@array/sett_update_interval_items"
			android:entryValues="@array/sett_update_interval_v" android:title="@string/sett_update_interval"
			android:dialogTitle="@string/sett_update_interval" android:key="updateInterval"
			android:defaultValue="180000" android:dependency="enableC2DM"/-->

		<CheckBoxPreference android:title="@string/sett_https"
			android:summary="@string/sett_https_summary" android:key="useHTTPS"
			android:defaultValue="false"/>
		
		<CheckBoxPreference android:title="@string/sett_push"
			android:summary="@string/sett_push_summary" android:key="enableC2DM"
			android:defaultValue="true" android:disableDependentsState="true"/>
		
		<CheckBoxPreference android:title="@string/sett_update_on_open"
			android:summary="@string/sett_update_on_open_summary" android:key="refreshOnOpen"
			android:defaultValue="true"/>
			
		<CheckBoxPreference android:title="@string/sett_bdays" android:key="notifyBDays"
			android:defaultValue="true"/>
			
		<Preference android:title="@string/sett_advanced"
			android:summary="" android:key="advanced"/>
		
		<!--Preference android:title="Stop C2DM"
			android:summary="" android:key="stopc2dm"/>
		<Preference android:title="Start C2DM"
			android:summary="" android:key="startc2dm"/-->
	</PreferenceCategory>


	<PreferenceCategory android:title="@string/sett_notifications" android:key="cat_notify">
		<CheckBoxPreference android:title="@string/sett_notify_sound"
		 android:key="notifySound"
			android:defaultValue="true" />
		<CheckBoxPreference android:title="@string/sett_notify_vibrate"
		 android:key="notifyVibrate"
			android:defaultValue="true" />
		<CheckBoxPreference android:title="@string/sett_notify_led"
		 android:key="notifyLED"
			android:defaultValue="true" />
		<RingtonePreference android:ringtoneType="notification"
			android:key="notifyRingtone" android:title="@string/sett_ringtone"
			android:showDefault="true" android:showSilent="false"
			android:defaultValue="content://settings/system/notification_sound"/>
		<Preference
			android:key="doNotDistrib"
			android:title="@string/dnd_mode" />

	</PreferenceCategory>
	
	<!-- PreferenceCategory android:title="@string/sett_video_calls" android:key="cat_video_calls">
		<CheckBoxPreference android:title="@string/sett_accept_calls"
		 android:key="acceptVoip"
			android:defaultValue="true" />
		<RingtonePreference android:ringtoneType="ringtone"
			android:key="voipRingtone" android:title="@string/sett_call_ringtone"
			android:showDefault="true" android:showSilent="true"
			android:defaultValue="content://settings/system/notification_sound"/>
	</PreferenceCategory-->

	
	<PreferenceCategory android:title="@string/sett_account">
		<Preference android:title="@string/sett_news_banned"
			android:summary="@string/sett_news_banned_summary" android:key="newsBanned"/>
			
		<Preference android:title="@string/sett_sync"
			android:summary="" android:key="sync"/>
	
		<Preference android:title="@string/log_out"
			android:summary="" android:key="logOut"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/sett_other">
		<Preference
			android:id="@+id/debug_menu"
			android:key="debug_menu"
			android:title="@string/debug_menu" />
		<Preference android:title="@string/menu_about" android:key="about" />

	</PreferenceCategory>

</PreferenceScreen>
