<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="debug_menu">

    <PreferenceCategory
        android:title="@string/sett_general"
        android:layout="@layout/category_prefw">

    <Preference
        android:id="@+id/logToFile"
        android:key="logToFile"
        android:layout="@layout/pref_widget"
        android:title="@string/write_logs_to_file" />

    <Preference
        android:id="@+id/bugReport"
        android:key="bugReport"
        android:layout="@layout/pref_widget"
        android:title="@string/send_bug_report" />

    <Preference
        android:key="terminate"
        android:layout="@layout/pref_widget"
        android:title="@string/terminate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sett_danger_zone"
        android:layout="@layout/category_prefw"
        android:key="danger_zone">
        <Preference
            android:key="copyAccessToken"
            android:title="@string/copy_token"
            android:layout="@layout/pref_widget"/>
    </PreferenceCategory>

</PreferenceScreen>