<?xml version="1.0" encoding="utf-8"?>
<!--
    OPENVK LEGACY LICENSE NOTIFICATION

    This program is free software: you can redistribute it and/or modify it under the terms of
    the GNU Affero General Public License as published by the Free Software Foundation, either
    version 3 of the License, or (at your option) any later version.
    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
    See the GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License along with this
    program. If not, see https://www.gnu.org/licenses/.

    Source code: https://github.com/openvk/mobile-android-legacy
!-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<Preference
		android:key="restart_required"
		android:layout="@layout/pref_notification" />
    
	<PreferenceCategory
		android:title="@string/sett_general"
		android:layout="@layout/pref_category">

		<CheckBoxPreference android:title="@string/sett_https"
			android:summary="@string/sett_https_summary" android:key="useHTTPS"
			android:layout="@layout/pref_widget_checkbox"
			android:defaultValue="false"/>

		<CheckBoxPreference android:title="@string/sett_use_proxy"
			android:key="useProxy"
			android:layout="@layout/pref_widget_checkbox"
			android:defaultValue="false"/>
			
		<Preference android:title="@string/sett_proxy_address"
			android:layout="@layout/pref_widget"
			android:summary="" android:key="proxySettings"/>

	</PreferenceCategory>


</PreferenceScreen>
