<?xml version="1.0" encoding="utf-8"?>
<!--
    OPENVK LEGACY LICENSE NOTIFICATION

    This program is free software: you can redistribute it and/or modify it under the terms of
    the GNU Affero General Public License as published by the Free Software Foundation, either
    version 3 of the License, or (at your option) any later version.
    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
    See the GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License along with this
    program. If not, see https://www.gnu.org/licenses/.

    Source code: https://github.com/openvk/mobile-android-legacy
!-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <!--item android:id="@+id/hide" android:title="@string/hide_fron_newsfeed" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item-->
    <item android:id="@+id/attach" android:title="" android:icon="@drawable/ic_ab_attach"></item>
    <item android:id="@+id/edit" android:title="@string/edit" android:icon="@android:drawable/ic_menu_edit"></item>
    <item android:id="@+id/delete" android:title="@string/delete" android:icon="@android:drawable/ic_menu_delete"></item>
    <item android:id="@+id/show_original_post" android:title="@string/show_original_post"></item>
    <item android:id="@+id/copy_link" android:title="@string/copy_link"></item>
</menu>
