<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyleft © 2022, 2023 OpenVK Team
    Copyleft © 2022, 2023 Dmitry Tretyakov (aka. Tinelix)

    This program is free software: you can redistribute it and/or modify it under the terms of
    the GNU Affero General Public License as published by the Free Software Foundation, either
    version 3 of the License, or (at your option) any later version.
    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
    See the GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License along with this
    program. If not, see https://www.gnu.org/licenses/.

    Source code: https://github.com/openvk/mobile-android-legacy
!-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/remove_friend"
        android:title="@string/delete_friend" />
    <item android:id="@+id/copy_link" android:title="@string/copy_link"/>
    <item android:id="@+id/open_in_browser" android:title="@string/open_in_browser"/>

</menu>