<?xml version="1.0" encoding="utf-8"?>
<!--
    OPENVK LEGACY LICENSE NOTIFICATION

    This program is free software: you can redistribute it and/or modify it under the terms of
    the GNU Affero General Public License as published by the Free Software Foundation, either
    version 3 of the License, or (at your option) any later version.
    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
    See the GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License along with this
    program. If not, see https://www.gnu.org/licenses/.

    Source code: https://github.com/openvk/mobile-android-legacy
!-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<item android:title="@string/menu_settings" android:id="@+id/main_menu_settings" android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:title="@string/menu_about" android:id="@+id/main_menu_about" android:icon="@android:drawable/ic_menu_info_details"></item>
    <item android:title="@string/menu_exit" android:id="@+id/main_menu_exit" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
</menu>
