<?xml version="1.0" encoding="utf-8"?>
<!--
    OPENVK LEGACY LICENSE NOTIFICATION

    This program is free software: you can redistribute it and/or modify it under the terms of
    the GNU Affero General Public License as published by the Free Software Foundation, either
    version 3 of the License, or (at your option) any later version.
    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
    See the GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License along with this
    program. If not, see https://www.gnu.org/licenses/.

    Source code: https://github.com/openvk/mobile-android-legacy
!-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_ab_copy"
        android:showAsAction="always"
        android:title="@string/copy_text"/>
    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_ab_forward"
        android:showAsAction="always"
        android:title="@string/msg_forward"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_ab_delete"
        android:showAsAction="always"
        android:title="@string/delete"/>

</menu>