<?xml version="1.0" encoding="utf-8"?>
<!--
    OPENVK LEGACY LICENSE NOTIFICATION

    This program is free software: you can redistribute it and/or modify it under the terms of
    the GNU Affero General Public License as published by the Free Software Foundation, either
    version 3 of the License, or (at your option) any later version.
    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
    See the GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License along with this
    program. If not, see https://www.gnu.org/licenses/.

    Source code: https://github.com/openvk/mobile-android-legacy
!-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<!--CheckBoxPreference android:title="@string/sett_load_images"
					android:summary="@string/sett_load_images_summary" android:key="loadImages"
					android:defaultValue="true" /-->

	<PreferenceCategory android:title="@string/sett_cache" android:layout="@layout/pref_category">
		<CheckBoxPreference android:title="@string/sett_forced_caching" android:key="forceCaching"
			android:layout="@layout/pref_widget_checkbox"/>
		<Preference android:title="@string/sett_cache_quality" android:key="imageCacheQuality"
			android:layout="@layout/pref_widget"/>
		<Preference android:title="@string/sett_clear_img_cache"
			android:layout="@layout/pref_widget"
			android:summary="" android:key="clearImageCache"/>
	</PreferenceCategory>
</PreferenceScreen>